# ThreadSum

./: .gitignore  CMakeLists.txt  README.md
include/: ParallelSum.hpp  SequentialSum.hpp
src/: ParallelSum.cpp  SequentialSum.cpp  main.cpp
